<resources>
    <string name="app_name">Pantomime</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_ready_to">Get ready to</string>
    <string name="guess_the_word">Guess the Word</string>
    <string name="start">Start</string>
    <string name="the_word_is">The word is…</string>
    <string name="pantomime">Pantomime</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got It</string>
    <string name="score">Score: %d</string>
    <string name="quote_format">\"%s\"</string>
    <string name="you_scored">You Scored:</string>
    <string name="play_again">Play Again</string>
    <string name="people">PEOPLE</string>
    <string name="movies">MOVIES</string>
    <string name="animals">ANIMALS</string>
</resources>
